--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="pure-u-1-1">
         <div id="vis1" class="vis-container"></div>
       </div>
-      
+      <div class="pure-u-1-1"><p class="a1">(You can click one of the bars on the bar chart, the country you click will be highlighted on the map and bar chart.) </h5></div>
     </div>
     
 
