--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="description description-left">
           <h2 class="s1">Introduction</h2>
           <p>The effects of human-caused global warming are happening now, are irreversible on the timescale of people alive today, and will worsen in the decades to come. 
-            From these two graphs, we can find the whole world temperature is increasing since 1960. And Svalbard and Jan Mayen is influenced by global warming most seriously.
+            From these two graphs, we can find the whole world temperature is increasing since 1960. And Canada is influenced by global warming most seriously.
         </p>
         </div>
       </div>
@@ -53,7 +53,7 @@
       <div class="pure-u-1-1">
         <div id="vis1" class="vis-container"></div>
       </div>
-      <div class="pure-u-1-1"><p class="a1">(You can click one of the bars on the bar chart, the country you click will be highlighted on the map and bar chart.) </h5></div>
+      <div class="pure-u-1-1"><p class="a1">(You can click one of the bars on the bar chart, and the country you click will be highlighted on the map and bar chart.) </h5></div>
     </div>
     
 
@@ -65,9 +65,9 @@
       <div class="pure-u-1-3">
         <div class="description description-right">
           <h2>Environmental Effects</h2>
-          <p>The graph shows there is a significant rise in sea level from 1880 to 2013. The rising sea level is mainly due to the meltwater from glaciers and ice sheets and the thermal expansion of seawater as it warms.<br>
+          <p>The graph shows a significant rise in sea level from 1880 to 2013. The rising sea level is mainly due to the meltwater from glaciers and ice sheets and the thermal expansion of seawater as it warms.<br>
             <br>
-            Low-lying islands and coastal communities are threatened by sea level rise, for instance, Japan. The low-lying area might be lower than the sea level. Therefore, some of the lands might be permanently lost to the sea.
+            Low-lying islands and coastal communities are threatened by sea level rise, for instance, Japan. The low-lying area might be lower than the sea level, so some of the lands might be permanently lost to the sea.
           </p>
         </div>
       </div>
@@ -84,12 +84,7 @@
       <div class="pure-u-1-3">
         <div class="description description-right">
           <h2>Drivers of Recent Temperature Rise</h2>
-          <p>Greenhouse gases are the most significant drivers of global climate change. 
-            The greenhouse gases that affect Earth include carbon dioxide, methane, water vapour, nitrous oxide, and ozone. 
-            From the left bubble plot, we can find there is a positive relationship between CO2 emissions and tree cover loss. 
-            This means that tree cover loss is one of the factors that causes CO2 increase. 
-            Luckily, Australia has less tree cover loss. 
-            However climate change is a global issue, and all countries need to reduce deforestation.
+          <p>Greenhouse gases are the most significant drivers of global climate change. The greenhouse gases that affect Earth include carbon dioxide, methane, water vapour, nitrous oxide, and ozone. The left bubble plot shows a positive relationship between CO2 emissions and tree cover loss. This positive relationship means that tree cover loss is one of the factors that causes CO2 increase. Luckily, Australia has less tree cover loss. However, climate change is a global issue, and all countries reduce deforestation.
 
           </p>
         </div>
@@ -103,9 +98,7 @@
       <div class="pure-u-1-3">
         <div class="description description-left">
           <h2>CO2 Emission by Fuel Type</h2>
-          <p>As of 2019, approximately 81% of the world’s primary energy supply still comes from fossil fuels, specifically, coal, oil, and natural gas. 
-            As a result, high carbon emissions are in the extraction and production of energy and the final consumer use of the energy. Continued dependence on fossil fuel-based energy sources is a barrier to emissions reductions. 
-            The good thing is more and more governments realized this issue and set lots of policies to reduce CO2 emissions.
+          <p>As of 2019, approximately 81% of the world’s primary energy supply still comes from fossil fuels, specifically coal, oil, and natural gas. As a result, high carbon emissions are in the extraction and production of energy and the final consumer use of the energy. Continued dependence on fossil fuel-based energy sources is a barrier to emissions reductions. The good thing is that more and more governments have realized this issue and set many policies to reduce CO2 emissions.
              </p>
         </div>
       </div>
